# serializer version: 1
# name: test_livetennis[api_error_atp]
  dict({
    'alt_game_note': None,
    'api_message': 'API error, no data returned',
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': None,
    'date': None,
    'down_distance_text': None,
    'event_id': None,
    'event_name': None,
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'api_error_atp',
    'icon': 'mdi:tennis',
    'last_play': None,
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': None,
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': None,
    'opponent_logo': None,
    'opponent_long_name': None,
    'opponent_name': None,
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'NOT_FOUND',
    'strikes': None,
    'team_abbr': 'SINNER',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': None,
    'team_logo': None,
    'team_long_name': None,
    'team_name': None,
    'team_rank': None,
    'team_record': None,
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_livetennis[test_in]
  dict({
    'alt_game_note': None,
    'api_message': None,
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': 'Set 3 - 40-30 - Sinner serving',
    'date': '2026-09-12T13:00Z',
    'down_distance_text': 'Quarterfinal',
    'event_id': '191001',
    'event_name': 'Jannik Sinner v Carlos Alcaraz',
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_in',
    'icon': 'mdi:tennis',
    'last_play': ' Set 1: Sinner 6 Alcaraz 4;  Set 2: Sinner 3 Alcaraz 6;  Set 3: Sinner 4 Alcaraz 3; ',
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': 'ATP Tour',
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4002',
    'opponent_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'opponent_long_name': 'Carlos Alcaraz',
    'opponent_name': 'Carlos Alcaraz',
    'opponent_rank': 2,
    'opponent_record': None,
    'opponent_score': 3,
    'opponent_sets_won': '1',
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': 'Singles',
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 3,
    'season': '2026',
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'SINNER',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4001',
    'team_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'team_long_name': 'Jannik Sinner',
    'team_name': 'Jannik Sinner',
    'team_rank': 1,
    'team_record': None,
    'team_score': 4,
    'team_sets_won': '1',
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Cincinnati Masters',
  })
# ---
# name: test_livetennis[test_in_tiebreak]
  dict({
    'alt_game_note': None,
    'api_message': None,
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': 'Set 2 - Tiebreak 5-4 - Gauff serving',
    'date': '2026-09-12T12:30Z',
    'down_distance_text': 'Quarterfinal',
    'event_id': '191002',
    'event_name': 'Elena Rybakina v Coco Gauff',
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_in_tiebreak',
    'icon': 'mdi:tennis',
    'last_play': ' Set 1: Rybakina 7 Gauff 5;  Set 2: Rybakina 6 Gauff 6; ',
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': 'ATP Tour',
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4004',
    'opponent_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'opponent_long_name': 'Coco Gauff',
    'opponent_name': 'Coco Gauff',
    'opponent_rank': 3,
    'opponent_record': None,
    'opponent_score': 6,
    'opponent_sets_won': '0',
    'opponent_shots_on_target': '4',
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': 'Singles',
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 2,
    'season': '2026',
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'RYBAKINA',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4003',
    'team_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'team_long_name': 'Elena Rybakina',
    'team_name': 'Elena Rybakina',
    'team_rank': 4,
    'team_record': None,
    'team_score': 6,
    'team_sets_won': '1',
    'team_shots_on_target': '5',
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Cincinnati Masters',
  })
# ---
# name: test_livetennis[test_invalid_team]
  dict({
    'alt_game_note': None,
    'api_message': "No competition scheduled for 'INVALID_TEAM_ID' between 2026-09-11T11:00Z and 2026-09-13T17:00Z",
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': None,
    'date': None,
    'down_distance_text': None,
    'event_id': None,
    'event_name': None,
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_invalid_team',
    'icon': 'mdi:tennis',
    'last_play': None,
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': 'ATP Tour',
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': None,
    'opponent_logo': None,
    'opponent_long_name': None,
    'opponent_name': None,
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'NOT_FOUND',
    'strikes': None,
    'team_abbr': 'INVALID_TEAM_ID',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': None,
    'team_logo': None,
    'team_long_name': None,
    'team_name': None,
    'team_rank': None,
    'team_record': None,
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_livetennis[test_invalid_tour]
  dict({
    'alt_game_note': None,
    'api_message': 'API error, no data returned',
    'api_url': None,
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': None,
    'date': None,
    'down_distance_text': None,
    'event_id': None,
    'event_name': None,
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_invalid_tour',
    'icon': 'mdi:tennis',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': None,
    'league_path': 'INVALID_LEAGUE_PATH',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': None,
    'opponent_logo': None,
    'opponent_long_name': None,
    'opponent_name': None,
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'NOT_FOUND',
    'strikes': None,
    'team_abbr': 'SINNER',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': None,
    'team_logo': None,
    'team_long_name': None,
    'team_name': None,
    'team_rank': None,
    'team_record': None,
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_livetennis[test_post]
  dict({
    'alt_game_note': None,
    'api_message': None,
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': 'Final',
    'date': '2026-09-11T11:00Z',
    'down_distance_text': 'Round of 16',
    'event_id': '190900',
    'event_name': 'Iga Swiatek v Aryna Sabalenka',
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_post',
    'icon': 'mdi:tennis',
    'last_play': ' Set 1: Swiatek 6 Sabalenka 3;  Set 2: Swiatek 6 Sabalenka 4; ',
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': 'ATP Tour',
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4010',
    'opponent_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'opponent_long_name': 'Aryna Sabalenka',
    'opponent_name': 'Aryna Sabalenka',
    'opponent_rank': 1,
    'opponent_record': None,
    'opponent_score': '0',
    'opponent_sets_won': '0',
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': 'Singles',
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 2,
    'season': '2026',
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'SWIATEK',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4009',
    'team_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'team_long_name': 'Iga Swiatek',
    'team_name': 'Iga Swiatek',
    'team_rank': 2,
    'team_record': None,
    'team_score': '2',
    'team_sets_won': '1',
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Cincinnati Masters',
  })
# ---
# name: test_livetennis[test_post_retired]
  dict({
    'alt_game_note': None,
    'api_message': None,
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': 'Final - Retired (1-0 sets)',
    'date': '2026-09-11T13:30Z',
    'down_distance_text': 'Round of 16',
    'event_id': '190901',
    'event_name': 'Taylor Fritz v Ben Shelton',
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_post_retired',
    'icon': 'mdi:tennis',
    'last_play': '',
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': 'ATP Tour',
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4012',
    'opponent_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'opponent_long_name': 'Ben Shelton',
    'opponent_name': 'Ben Shelton',
    'opponent_rank': 12,
    'opponent_record': None,
    'opponent_score': '0',
    'opponent_sets_won': '0',
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': 'Singles',
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': '2026',
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'FRITZ',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4011',
    'team_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'team_long_name': 'Taylor Fritz',
    'team_name': 'Taylor Fritz',
    'team_rank': 6,
    'team_record': None,
    'team_score': '0',
    'team_sets_won': '0',
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Cincinnati Masters',
  })
# ---
# name: test_livetennis[test_pre]
  dict({
    'alt_game_note': None,
    'api_message': None,
    'api_url': 'https://api.livetennisapi.com/api/public/v1/matches?status=live&tour=atp&limit=200',
    'attribution': 'Powered by livetennisapi.com',
    'balls': None,
    'clock': '17:00Z',
    'date': '2026-09-13T17:00Z',
    'down_distance_text': 'Semifinal',
    'event_id': '191010',
    'event_name': 'Novak Djokovic v Daniil Medvedev',
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'test_pre',
    'icon': 'mdi:tennis',
    'last_play': '',
    'league': 'LTATP',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': 'ATP Tour',
    'league_path': 'atp',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4006',
    'opponent_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'opponent_long_name': 'Daniil Medvedev',
    'opponent_name': 'Daniil Medvedev',
    'opponent_rank': 8,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': '0',
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': 'Singles',
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': '2026',
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': 'livetennis',
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'DJOKOVIC',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4005',
    'team_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'team_long_name': 'Novak Djokovic',
    'team_name': 'Novak Djokovic',
    'team_rank': 5,
    'team_record': None,
    'team_score': None,
    'team_sets_won': '0',
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Cincinnati Masters',
  })
# ---
